# mutare

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  analysis.json  config.json  config.py  nohup.out  parameters.ron  requirements.txt  test_script.py
docs/: abstract-FisEs.tex  mutare.bib  notes.tex  paper.tex  presentation-GISC.tex  presentation.tex
docs/FisEs/: abstract.tex
docs/paper/: main.tex  refs.bib  supp.tex
report/: notes.tex
reports/: notes.tex  references.bib
scripts/: Gillespie.py  Pareto_front.py  config.py  explore_configs.py  make_all_sims.py  make_sims.py  manage_sims.py  manage_sims.tcss  manager.py  organizer.py  reports.py  results.py  run_all_sims.py  runner.py  sims_configs.py  test.py
scripts/mutare_tools/: __init__.py  analysis.py  config.py  exec.py
scripts/mutare_tools/plots/: __init__.py  consts.py  core.py  utils.py
scripts/utils/: analysis.py  config.py  exec.py  manager.py  plots.py  plotting.py  results.py  runner.py
src/: analysis.rs  analyst.rs  config.rs  data.rs  engine.rs  main.rs  manager.rs  model.rs  params.rs  stats.rs  types.rs  utils.rs
tests/: basic_test.rs  integration.rs  integration_test.rs
