[package]
name = "mutare"
version = "0.11.0"
authors = ["Marco Mendívil Carboni <marcomc@ucm.es>"]
edition = "2024"
description = "A simple tool to simulate and analyze a stochastic agent-based model of adaptation in uncertain environments."
repository = "https://github.com/Marco-Mendivil-Carboni/mutare"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
env_logger = { version = "0.11.8", default-features = false, features = ["humantime"] }
glob = "0.3.3"
log = "0.4.29"
rand = "0.9.2"
rand_chacha = { version = "0.9.0", features = ["serde"] }
rand_distr = "0.5.1"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.12", default-features = false, features = ["parse", "serde"] }
